# miocard_detection

./: .gitignore  app.py  pyproject.toml
models/: catboost_model
notebooks/: analysis.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
src/: finding_models.py  preproccesing.py
